--- a/web/src/components/PageHeader/styles.css
+++ b/web/src/components/PageHeader/styles.css
@@ -44,7 +44,7 @@
   .page-header {
     height: 340px;
   }
-  .toop.top-bar-container {
+  .page-header .top-bar-container {
     max-width: 1100px;
   }
 
