--- a/web/src/pages/TeachersList/styles.css
+++ b/web/src/pages/TeachersList/styles.css
@@ -13,6 +13,7 @@
 
 #search-teachers .input-block {
   position: relative;
+  display: inline;
 }
 
 #search-teachers .input-block + .input-block {
@@ -46,24 +47,44 @@
   bottom: 0;
 }
 
+#page-teacher-list main {
+  margin: 3.2rem auto;
+  width: 90%;
+}
+
 @media (min-width: 700px) {
   #page-teacher-list {
-    max-width: 100%;
+    max-width: 100vw;
   }
 
   #search-teachers {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 16px;
-    position: relative;
+    position: absolute;
     bottom: -44px;
   }
 
-  #search-teachers .input-block .input {
-    display: inline;
+  #search-teachers .input-block {
+    display: flex;
+    width: 700px;
+  }
+
+  #search-teachers .input-block input {
+    width: 100%;
   }
 
   #search-teachers .input-block + .input-block {
     margin-top: 0;
+  }
+
+  #linha {
+    width: 20px;
+  }
+
+  #page-teacher-list main {
+    padding: 3.2rem 0;
+    max-width: 740px;
+    margin: 0 auto;
   }
 }
