--- a/web/src/pages/TeachersList/styles.css
+++ b/web/src/pages/TeachersList/styles.css
@@ -56,6 +56,12 @@
   #page-teacher-list {
     max-width: 100vw;
   }
+ 
+  #page-teacher-list main {
+    padding: 3.2rem 0;
+    max-width: 740px;
+    margin: 0 auto;
+  }
 
   #search-teachers {
     display: grid;
