--- a/web/src/pages/TeachersList/styles.css
+++ b/web/src/pages/TeachersList/styles.css
@@ -1,6 +1,6 @@
 #page-teacher-list {
   width: 100vw;
-  height: 100vh;
+  height: 500vh;
 }
 
 #search-teachers {
@@ -36,6 +36,18 @@
   font: 1.6rem Archivo;
 }
 
+#search-teachers .input-block Select {
+  width: 100%;
+  height: 5.6rem;
+  margin-top: 0.8rem;
+  border-radius: 0.8rem;
+  background: var(--color-input-background);
+  border: 1px solid var(--color-line-in-white);
+  outline: 0;
+  padding: 0 1.6rem;
+  font: 1.6rem Archivo;
+}
+
 #search-teachers .input-block:focus-within::after {
   width: calc(100% - 3.2rem);
   height: 2px;
@@ -56,7 +68,7 @@
   #page-teacher-list {
     max-width: 100vw;
   }
- 
+
   #page-teacher-list main {
     padding: 3.2rem 0;
     max-width: 740px;
@@ -73,10 +85,15 @@
 
   #search-teachers .input-block {
     display: flex;
-    width: 700px;
+    width: 100px;
   }
 
   #search-teachers .input-block input {
+    width: 100%;
+    margin-left: 15px;
+  }
+
+  #search-teachers .input-block #sel {
     width: 100%;
   }
 
