--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -73,6 +73,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--color-text-in-primary);
 }
 
 .total-conections img {
