--- a/web/src/pages/TeachersForm/styles.css
+++ b/web/src/pages/TeachersForm/styles.css
@@ -41,6 +41,21 @@
   border-bottom: 1px solid var(--color-line-in-white);
 }
 
+#page-teatcher-form main fieldset legend .btn {
+  background: none;
+  border: none;
+  color: var(--color-primary);
+  font: 700 1.6rem Archivo;
+  cursor: pointer;
+  transition: color 0.2rem;
+  margin-right: 88px;
+  margin-top: 50px;
+}
+
+#page-teatcher-form main fieldset legend .btn:hover {
+  color: var(--color-primary-dark);
+}
+
 #page-teatcher-form main label {
   color: grey;
 }
@@ -113,6 +128,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  
+  /* 
+  #page-teatcher-form main .schedule-item {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    column-gap: 1.6rem;
+  } */
+
+  #page-teatcher-form .schedule-item .input-block {
+    margin-top: 0 !important;
   }
 
   #page-teatcher-form main footer p {
