--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -10,6 +10,7 @@
 
 .logo-container img {
   height: 10rem;
+  width: 30rem;
 }
 
 .hero-image {
@@ -106,6 +107,7 @@
 
   .logo-container img {
     height: 100%;
+    width: 48rem;
   }
   .hero-image {
     grid-area: hero;
