--- a/src/pages/TeachersForm/styles.css
+++ b/src/pages/TeachersForm/styles.css
@@ -15,6 +15,12 @@
   margin: 1rem auto 3.2rem;
   padding-top: 6.4rem;
   overflow: hidden;
+  padding: 4px;
+}
+
+#page-teatcher-form main fieldset {
+  margin-top: 6.4rem;
+  padding: 25px;
 }
 
 #page-teatcher-form main fieldset + fieldset {
@@ -69,13 +75,13 @@
 
 #page-teatcher-form main footer p {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   font-size: 1.4rem;
   line-height: 2.4rem;
   color: var(--color-text-complement);
-  margin-top: -150px;
-  width: 590px;
+  /* margin-top: -150px; */
+  max-width: 890px;
 }
 
 #page-teatcher-form main footer p img {
@@ -83,7 +89,7 @@
 }
 
 #page-teatcher-form main footer p #brake-line button {
-  width: 72rem;
+  width: 32rem;
   height: 5.6rem;
   color: var(--color-button-text);
   background: var(--color-secundary);
@@ -97,7 +103,8 @@
   justify-content: center;
   text-decoration: none;
   transition: background-color 0.2s;
-  margin-top: 3.2rem;
+  margin-top: -6rem;
+  margin-left: 106px;
 }
 
 #page-teatcher-form main footer button:hover {
@@ -129,7 +136,7 @@
     align-items: center;
     justify-content: space-between;
   }
-  
+
   /* 
   #page-teatcher-form main .schedule-item {
     display: grid;
@@ -160,8 +167,8 @@
     width: 400px;
   }
 
-  #page-teatcher-form main footer button {
-    width: 20rem;
+  #page-teatcher-form main footer p #brake-line button {
+    width: 72rem;
     margin-top: 0;
     margin-left: -100px;
   }
