--- a/src/pages/TeachersList/styles.css
+++ b/src/pages/TeachersList/styles.css
@@ -59,6 +59,10 @@
   background: var(--color-secundary-dark);
 }
 
+#search-teachers .input-block button #search {
+  margin-top: -5px;
+  color: var(--color-button-text);
+}
 #search-teachers .input-block Select {
   width: 100%;
   height: 5.6rem;
